[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.1",
    "yfinance>=0.2.65",
]
